# Ghosty

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  local_destroy.ps1  local_setup.ps1  proxmox_destroy.sh  proxmox_setup.sh  scrub_agent.py  wazuh_ossec.conf
NoVirus/: CMakeLists.txt  README.md
NoVirus/include/: BehavioralMonitor.h  CloudVerifier.h  ContextAnalyzer.h  FileScanner.h  ProcessScanner.h  Remediator.h
NoVirus/src/: BehavioralMonitor.cpp  CloudVerifier.cpp  ContextAnalyzer.cpp  FileScanner.cpp  ProcessScanner.cpp  Remediator.cpp  main.cpp
NoVirus/test_scan_area/: ransom_test_file_1.txt  ransom_test_file_10.txt  ransom_test_file_11.txt  ransom_test_file_12.txt  ransom_test_file_13.txt  ransom_test_file_14.txt  ransom_test_file_15.txt  ransom_test_file_16.txt  ransom_test_file_17.txt  ransom_test_file_18.txt  ransom_test_file_19.txt  ransom_test_file_2.txt  ransom_test_file_20.txt  ransom_test_file_21.txt  ransom_test_file_22.txt  ransom_test_file_23.txt  ransom_test_file_24.txt  ransom_test_file_25.txt  ransom_test_file_26.txt  ransom_test_file_27.txt  ransom_test_file_28.txt  ransom_test_file_29.txt  ransom_test_file_3.txt  ransom_test_file_30.txt  ransom_test_file_31.txt  ransom_test_file_32.txt  ransom_test_file_33.txt  ransom_test_file_34.txt  ransom_test_file_35.txt  ransom_test_file_36.txt  ransom_test_file_37.txt  ransom_test_file_38.txt  ransom_test_file_39.txt  ransom_test_file_4.txt  ransom_test_file_40.txt  ransom_test_file_41.txt  ransom_test_file_42.txt  ransom_test_file_43.txt  ransom_test_file_44.txt  ransom_test_file_45.txt  (+21 more)
(+54 files in other folders)
